# markdown-to-netscape

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
examples/: expected_bookmarks.html  links.md  urls.md
scripts/: build-macos-aarch64.sh
specs/001-markdown-netscape/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-markdown-netscape/contracts/: cli-contract.md
src/: converter.rs  main.rs  models.rs
tests/: cli_contract.rs  non_list_elements.rs  quickstart.rs
tests/contract/: cli_contract.rs
tests/integration/: quickstart.rs
