[package]
name = "markdown-to-netscape"
version = "0.1.0"
edition = "2021"

[dependencies]
pulldown-cmark = "0.9"
url = "2"

# CLI, error handling and logging
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"
